# rusty-dawg

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  stats.jsonl
.github/: dependabot.yml
.github/actions/propagate-version/: action.yml
.github/actions/rust-sccache-cache/: action.yml
.github/actions/rust-sccache-setup/: action.yml
.github/workflows/: ci.yml  main.yml  main.yml.bak  main.yml.bkp2  publish.yml  python.yml  release.yml  rust.yml
api/python/: README.md  dawg.py  example.ipynb
beaker/: pile.yaml
bindings/python/: Cargo.toml  Makefile  README.md  example.ipynb  pyproject.toml
bindings/python/rusty_dawg/: __init__.py
bindings/python/src/: cdawg.rs  cdawg_state.rs  dawg.rs  disk_cdawg.rs  disk_dawg.rs  disk_vec.rs  lib.rs  stat_utils.rs
bindings/python/src/lms/: induction_lm.rs  kn_lm.rs  mod.rs
demo/: README.md  app.py  app_helpers.py  app_info.py  demo.ipynb
scripts/: batch_pile.sh  batch_pile_debug.sh  benchmark.sh  create_env.sh  create_vms.sh  download_dawgs.py  generate_from_lm.py  generate_from_lms.sh  generate_random_data.sh  prepare_changelog.py  profile.sh  rebuild_bindings.sh  release.sh  run_beaker.sh  run_disk_dawg.py  run_disk_dawgs.py  run_local.sh  run_pile.sh  run_pile_beaker.sh  setup.sh  setup_env.sh  test_cdawg_matches_dawg.py  test_python_library.py  test_retokenize.py
scripts/cdawg/: batch_pile.sh  explore_topology.py  fill_counts.py  launch_servers.sh  open_tunnels.sh  run_cosmopedia.sh  run_local.sh  run_pile.sh  run_pile_beaker.sh  server.py  servers.sh  test_cdawg_matches_dawg.py  test_load_cdawg.py
scripts/dawg/: batch_pile_debug.sh  run_beaker.sh  run_local.sh  run_pile.sh
scripts/lms/: generate_from_lm.py
scripts/utils/: dawg_results.py  retokenizer.py
src/: build_cdawg.rs  build_stats.rs  dawg.rs  disk_vec.rs  evaluator.rs  inverse_failures.rs  lib.rs  main.rs  null_token_index.rs  stat_utils.rs  token_index.rs  weight.rs
src/byte_field/: byte_field_for_vec.rs  mod.rs
src/cdawg/: array_cdawg.rs  cdawg_edge_weight.rs  cdawg_state.rs  comparator.rs  crochemore.rs  immutable_cdawg.rs  inenaga.rs  metadata.rs  mod.rs  readable_cdawg.rs  stack.rs  token_backing.rs  topological_counter.rs  traverse_arity.rs
src/custom_graph/: iter_format.rs  macros.rs  mod.rs  serialization.rs  util.rs
src/data_reader/: buf_reader.rs  jsonl_reader.rs  mod.rs  pile_reader.rs  txt_reader.rs
src/dawg/: mod.rs  serde.rs
src/graph/: comparator.rs  graph_trait.rs  indexing.rs  mod.rs  traits.rs
src/graph/array_graph/: edge.rs  graph_impl.rs  mod.rs  node.rs  serde.rs
src/graph/avl_graph/: avl_graph_visitor.rs  comparator.rs  dot.rs  edge.rs  graph_impl.rs  mod.rs  node.rs  serde.rs
src/graph/memory_backing/: edge_backing.rs  mod.rs  node_backing.rs  vec_backing.rs
src/graph/memory_backing/disk_backing/: disk_mut_refs.rs  disk_vec.rs  edge.rs  mod.rs  node.rs  vec.rs
src/graph/memory_backing/ram_backing/: edge.rs  mod.rs  node.rs  vec.rs
src/graph/vec_graph/: dot.rs  mod.rs
src/infinigram/: mod.rs
src/io/: load.rs  mod.rs  save.rs
src/lms/: induction_lm.rs  kn_lm.rs  mod.rs
src/memory_backing/: mod.rs  vec.rs
src/memory_backing/byte_field/: byte_vec.rs  mod.rs
src/memory_backing/disk_backing/: disk_mut_refs.rs  mod.rs  vec.rs
src/memory_backing/ram_backing/: mod.rs  vec.rs
src/memory_backing/vec_backing/: cache_config.rs  cached_disk_vec.rs  disk_vec.rs  mod.rs
src/memory_backing/zero_copy/: mod.rs  node.rs
src/tokenize/: end.rs  mod.rs  null_token_index.rs  pretrain_tokenizer.rs  token_index.rs
src/tokenize2/: mod.rs  pretrain_tokenizer.rs  token_index.rs
src/vec_graph/: dot.rs  indexing.rs  mod.rs
src/veclike/: mod.rs
src/veclike/byte_field/: for_vec.rs  mod.rs
src/weight/: basic_weight.rs  mod.rs  weight40.rs  weight_mutator.rs
