[package]
name = "rusty-dawg"
version = "0.1.0"
authors = ["lambdaviking"]
repository = "https://github.com/viking-sudo-rm/rusty-dawg"
edition = "2015"

[dependencies]
bincode = "1.3.3"
bit-struct = "0.3.2"
bitvec = "1.0.1"
clap = { version = "4.4.6", features = ["derive"] }
fixedbitset = "0.4.2"
kdam = "0.3.0"
petgraph = "0.6.3"
serde = "1.0.163"
serde_json = "1.0.107"
memory-stats = "1.1.0"
substring = "1.4.5"
tempfile = "3.6.0"
test-temp-file = "0.1.2"
type-layout = "0.2.0"
ux = "0.1.5"
anyhow = "1.0"
tokenizers = { version = "0.14.1", default_features = false, features = ["progressbar", "http", "onig"] }
unicode-segmentation = "1.10"
openssl = { version = "0.10", features = ["vendored"] }
num = "0.4.1"
fslock = "0.2.1"
memmap2 = "0.9.0"
flate2 = "1.0.27"
