[package]
name = "rusty-dawg"
version = "0.2.2"
authors = ["lambdaviking"]
repository = "https://github.com/viking-sudo-rm/rusty-dawg"
edition = "2021"
description = "A Rust library for building and querying Directed Acyclic Word Graphs (DAWGs) and Compacted DAWGs (CDAWGs) for efficient string indexing and searching."
license = "MIT"



[dependencies]
bincode = "1.3.3"
bit-struct = "0.3.2"
bitvec = "1.0.1"
clap = { version = "4.5.23", features = ["derive"] }
kdam = "0.5.2"
serde = "1.0.213"
serde_json = "1.0.133"
memory-stats = "1.2.0"
substring = "1.4.5"
tempfile = "3.12.0"
test-temp-file = "0.1.2"
type-layout = "0.2.0"
ux = "0.1.6"
anyhow = "1.0"
tokenizers = { version = "0.20.3", default-features = false, features = ["progressbar", "http", "onig"] }
unicode-segmentation = "1.12"
fslock = "0.2.1"
flate2 = "1.0.33"
comparator = "0.3.0"
lru = "0.12.5"
memmap2 = "0.9.5"
openssl = { version = "0.10.64", features = ["vendored"] }
