[package]
name = "py-rusty-dawg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusty_dawg"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
pyo3 = "0.19.0"
rusty-dawg = { path = "../../", version = "*" }
