[package]
name = "py-rusty-dawg"
version = "0.9.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusty_dawg"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
pyo3 = { version = "0.19.0", features = ["anyhow"] }
rusty-dawg = { path = "../../", version = "*" }
