[build-system]
requires = [
    "setuptools >= 61.0.0",
    "wheel",
    "maturin[patchelf]>=1.1,<2.0 ; platform_system=='Linux'",
    "maturin>=1.1,<2.0 ; platform_system!='Linux'",
]
build-backend = "maturin"

[project]
name = "rusty-dawg"
dynamic = ["version"]
description = "A Rust library for building and querying Directed Acyclic Word Graphs (DAWGs) and Compacted DAWGs (CDAWGs) for efficient string indexing and searching."
authors = [{name = "lambdaviking"}]
requires-python = ">=3.10"

[tool.maturin]
features = ["pyo3/extension-module"]
